articles section implemented

--- a/src/src/translations/es/global.json
+++ b/src/src/translations/es/global.json
@@ -20,5 +20,8 @@
     },
     "partners": {
         "partners-title": "Socios"
+    },
+    "articles": {
+        "articles-title": "Artículos sobre Aclimate"
     }
 }
