--- a/src/src/translations/en/global.json
+++ b/src/src/translations/en/global.json
@@ -20,5 +20,8 @@
     },
     "partners": {
         "partners-title": "Partners"
+    },
+    "articles": {
+        "articles-title": "Articles about Aclimate"
     }
 }
