--- a/src/src/translations/es/global.json
+++ b/src/src/translations/es/global.json
@@ -6,13 +6,13 @@
         "documentation": "Documentación"
     },
     "map": {
-        "to-site": "Dirigete al sitio"
+        "to-site": "Dirígete al sitio"
     },
     "home": {
         "introduction": "AClimate es una plataforma que proporciona pronósticos agroclimáticos a agricultores y extensionistas para ayudarlos a tomar decisiones agrícolas informadas frente a la variabilidad climática. La plataforma ofrece información precisa y actualizada sobre las condiciones climáticas estacionales esperadas. Esta información permite a los agricultores planificar y prepararse para la próxima temporada de cultivo. Al proporcionar pronósticos climáticos estacionales, AClimate tiene como objetivo contribuir a eliminar los riesgos de los sistemas agrícolas. La plataforma está diseñada para ser fácil de usar y accesible, brindando información para respaldar las decisiones sobre la siembra, la cosecha y el manejo de sus cultivos. Con su enfoque en proporcionar pronósticos climáticos estacionales, AClimate está ayudando a mejorar la resiliencia de los sistemas agrícolas en los países donde se implementa.",
-        "map-title": "Nosotros estamos aqui",
+        "map-title": "Nosotros estamos aquí",
         "map-text": "¡Ven y explora el mundo de Aclimate! Nuestra plataforma innovadora está cambiando la forma en que los agricultores planifican y se preparan para la próxima temporada de cultivo. ¿Y la mejor parte? Está disponible en varios países, por lo que no importa dónde se encuentre, puede obtener información. Tómese un momento para visitar nuestro sitio web y ver si Aclimate está operando en su país. Estamos en constante expansión, por lo que nunca se sabe, es posible que pronto lleguemos a su área.",
-        "contact-title": "Contactanos",
+        "contact-title": "Contáctanos",
         "contact-role": "Científico Principal | Acción Climática"
     },
     "news": {
