--- a/src/src/translations/en/global.json
+++ b/src/src/translations/en/global.json
@@ -22,18 +22,18 @@
         "content-crop": "Crop Simulation",
         "crop-description": "The process of simulating the behavior of a crop over a period of time is done by using climate scenarios and specific configuration files. For rice cultivation, the Oryza model is used, while for corn and wheat crops, the DSSAT models are used.",
         "map-title": "We are here",
-        "map-text": "Come and explore the world of Aclimate! Our innovative platform is changing the way farmers plan and prepare for the growing season ahead. And the best part? It's available in multiple countries, so no matter where you are, you can get information. Take a moment to check out our website and see if Aclimate is operating in your country. We're constantly expanding, so you never know, we might be coming to your area soon.",
+        "map-text": "Come and explore the world of AClimate! Our innovative platform is changing the way farmers plan and prepare for the growing season ahead. And the best part? It's available in multiple countries, so no matter where you are, you can get information. Take a moment to check out our website and see if AClimate is operating in your country. We're constantly expanding, so you never know, we might be coming to your area soon.",
         "contact-title": "Contact us",
         "contact-role": "Principal Scientist | Climate Action"
     },
     "news": {
-        "news-title": "News about Aclimate"
+        "news-title": "News about AClimate"
     },
     "partners": {
         "partners-title": "Partners"
     },
     "articles": {
-        "articles-title": "Articles about Aclimate"
+        "articles-title": "Articles about AClimate"
     },
     "glossary": {
         "glossary-title": "Glossary"
