--- a/src/src/translations/en/global.json
+++ b/src/src/translations/en/global.json
@@ -1,41 +1,44 @@
 {
-    "menu": {
-        "news": "News",
-        "articles": "Articles",
-        "partners": "Partners",
-        "documentation": "Documentation",
-        "content": "Content",
-        "glossary": "Glossary"
-    },
-    "map": {
-        "to-site": "Go to the site"
-    },
-    "home": {
-        "introduction": "AClimate is a platform that provides agro-climatic forecasts to farmers and extension agents to help them make informed farming decisions in the face of climate variability. The platform offers accurate and up-to-date information about expected seasonal climate conditions. This information then allows farmers to plan and prepare for the growing season ahead. By providing seasonal climate forecasts, AClimate aims to contribute to reducing the risks of agricultural systems. The platform is designed to be user-friendly and accessible, providing information to support decisions about planting, harvesting, and managing their crops. With its focus on providing seasonal climate forecasts, AClimate is helping to improve the resilience of farming systems in the countries where it is deployed.",
-        "content-title": "Content",
-        "content-seasonal": "Seasonal Forecast",
-        "seasonal-description": "Seasonal weather forecasts give us probabilistic information about the categories - below normal, normal and above normal - in the next 6 months, determined this information can be obtained different scenarios on a daily basis, which serve as input to enter the crop models.",
-        "content-subseasonal": "Subseasonal Forecast",
-        "subseasonal-description": "Subseasonal weather forecasts provide us with probabilistic information in categories - below normal, normal and above normal - for each week of a month.",
-        "content-climate": "Climate Scenarios",
-        "climate-description": "Climate scenarios are necessary in crop simulation processes. To obtain these scenarios, a statistical process called re-sampling is carried out.",
-        "content-crop": "Crop Simulation",
-        "crop-description": "The process of simulating the behavior of a crop over a period of time is done by using climate scenarios and specific configuration files. For rice cultivation, the Oryza model is used, while for corn and wheat crops, the DSSAT models are used.",
-        "map-title": "We are here",
-        "map-text": "Come and explore the world of AClimate! Our innovative platform is changing the way farmers plan and prepare for the growing season ahead. And the best part? It's available in multiple countries, so no matter where you are, you can get information. Take a moment to check out our website and see if AClimate is operating in your country. We're constantly expanding, so you never know, we might be coming to your area soon.",
-        "contact-title": "Contact us",
-        "contact-role": "Principal Scientist | Climate Action"
-    },
-    "news": {
-        "news-title": "News about AClimate"
-    },
-    "partners": {
-        "partners-title": "Partners"
-    },
-    "articles": {
-        "articles-title": "Articles about AClimate"
-    },
-    "glossary": {
-        "glossary-title": "Glossary"
-    }
+  "menu": {
+    "news": "News",
+    "articles": "Articles",
+    "partners": "Partners",
+    "documentation": "Documentation",
+    "content": "Content",
+    "glossary": "Glossary"
+  },
+  "map": {
+    "to-site": "Go to the site"
+  },
+  "home": {
+    "introduction": "AClimate is a platform that provides agro-climatic forecasts to farmers and extension agents to help them make informed farming decisions in the face of climate variability. The platform offers accurate and up-to-date information about expected seasonal climate conditions. This information then allows farmers to plan and prepare for the growing season ahead. By providing seasonal climate forecasts, AClimate aims to contribute to reducing the risks of agricultural systems. The platform is designed to be user-friendly and accessible, providing information to support decisions about planting, harvesting, and managing their crops. With its focus on providing seasonal climate forecasts, AClimate is helping to improve the resilience of farming systems in the countries where it is deployed.",
+    "content-title": "Content",
+    "content-seasonal": "Seasonal Forecast",
+    "seasonal-description": "Seasonal weather forecasts give us probabilistic information about the categories - below normal, normal and above normal - in the next 6 months, determined this information can be obtained different scenarios on a daily basis, which serve as input to enter the crop models.",
+    "content-subseasonal": "Subseasonal Forecast",
+    "subseasonal-description": "Subseasonal weather forecasts provide us with probabilistic information in categories - below normal, normal and above normal - for each week of a month.",
+    "content-climate": "Climate Scenarios",
+    "climate-description": "Climate scenarios are necessary in crop simulation processes. To obtain these scenarios, a statistical process called re-sampling is carried out.",
+    "content-crop": "Crop Simulation",
+    "crop-description": "The process of simulating the behavior of a crop over a period of time is done by using climate scenarios and specific configuration files. For rice cultivation, the Oryza model is used, while for corn and wheat crops, the DSSAT models are used.",
+    "map-title": "We are here",
+    "map-text": "Come and explore the world of AClimate! Our innovative platform is changing the way farmers plan and prepare for the growing season ahead. And the best part? It's available in multiple countries, so no matter where you are, you can get information. Take a moment to check out our website and see if AClimate is operating in your country. We're constantly expanding, so you never know, we might be coming to your area soon.",
+    "bulletin-title": "Bulletin Generator",
+    "bulletin-description": "Do you need to create an agroclimatic bulletin? Our platform allows you to design, review, and export agroclimatic bulletins quickly, flexibly, and tailored to your context.",
+    "bulletin-button": "Create my bulletin",
+    "contact-title": "Contact us",
+    "contact-role": "Principal Scientist | Climate Action"
+  },
+  "news": {
+    "news-title": "News about AClimate"
+  },
+  "partners": {
+    "partners-title": "Partners"
+  },
+  "articles": {
+    "articles-title": "Articles about AClimate"
+  },
+  "glossary": {
+    "glossary-title": "Glossary"
+  }
 }
