feat: Add tools and bulletin builder translations to menu

--- a/src/src/translations/en/global.json
+++ b/src/src/translations/en/global.json
@@ -1,5 +1,7 @@
 {
   "menu": {
+    "tools": "Tools",
+    "bulletin_builder": "Bulletin Builder",
     "news": "News",
     "articles": "Articles",
     "partners": "Partners",
