--- a/src/src/translations/es/global.json
+++ b/src/src/translations/es/global.json
@@ -1,5 +1,7 @@
 {
   "menu": {
+    "tools": "Herramientas",
+    "bulletin_builder": "Bulletin Builder",
     "news": "Noticias",
     "articles": "Artículos",
     "partners": "Socios",
